    Universe (PR #2893)
  * ensure that unistd.h is included on macOS when compiling ENCORE's spe.c
    (Issue #2934)
  * Fix tests for analysis.bat that could fail when run in parallel and that
    would create a test artifact (Issue #2979, PR #2981)
  * Fix syntax warning over comparison of literals using is (Issue #3066)

Enhancements
  * Caches can now undergo central validation at the Universe level, opening
    the door to more useful caching. Already applied to fragment caching
    (Issue #2376, PR #3135)
  * Code for operations on compounds refactored, centralized and optimized for
    performance (Issue #3000, PR #3005)
  * Added automatic selection class generation for TopologyAttrs,
    FloatRangeSelection, and BoolSelection (Issues #2925, #2875; PR #2927)
  * Added 'to' operator, negatives, scientific notation, and arbitrary
    whitespace for ranges (Issue #3054, PR #2927)
  * Added `atol` and `rtol` keywords for float comparison (PR #2927)
  * Improved performance of the ParmEd converter (Issue #3028, PR #3029)
  * Improved analysis class docstrings, and added missing classes to the 
    `__all__` list (PR #2998)
  * The PDB writer gives more control over how to write the atom ids
    (Issue #1072, PR #2886)
  * Preliminary support for the Linux ARM64 platform with minimal
    dependencies (PR #2956)
  * Refactored analysis.helanal into analysis.helix_analysis
    (Issue #2452, PR #2622)
  * Improved MSD code to accept `AtomGroup` and reject `UpdatingAtomGroup`
    and improved docs (Issue #2784)
  * Added the RDKitParser which creates a `core.topology.Topology` object from
    an `rdkit.Chem.rdchem.Mol` object, and the RDKitReader to read coordinates
    from RDKit conformers (Issue #2468, PR #2707)
  * Added the `Aromaticities` topology attribute, and the `aromatic` selection
    token (Issue #2468, PR #2707)
  * Added the `from_smiles` classmethod to the Universe (Issue #2468, PR #2707)