@@ -1,0 +1,60 @@
+version: ~> 1.0
+language: generic
+group: travis_latest
+
+# Only build for develop
+branches:
+  only:
+    - develop
+
+matrix:
+  fast_finish: true
+  include:
+    - python: 3.8
+      name: "Power PC"
+      os: linux
+      arch: ppc64le
+      if: type = cron
+      before_install:
+        - wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-ppc64le.sh -O miniconda.sh
+        - mkdir $HOME/.conda
+        - bash miniconda.sh -b -p $HOME/miniconda
+        - $HOME/miniconda/bin/conda init bash
+        # for some reason the image does not like sourcing .bashrc
+        - . "/home/travis/miniconda/etc/profile.d/conda.sh"
+        - conda activate base
+        - conda update --yes conda
+        - conda install --yes pip pytest==6.1.2 mmtf-python biopython networkx cython matplotlib-base "scipy>=1.6" griddataformats hypothesis gsd codecov -c conda-forge -c biobuilds
+        - pip install pytest-xdist
+        - conda info
+      install:
+        - (cd package/ && python setup.py develop) && (cd testsuite/ && python setup.py install)
+      script:
+        - pytest testsuite/MDAnalysisTests --disable-pytest-warnings -n 2
+      after_sucess:
+        - echo "Override this stage for now"
+
+    - os: linux
+      language: python
+      arch: arm64-graviton2
+      python: 3.8
+      name: "ARM64"
+      dist: focal
+      virt: vm
+      group: edge
+      if: type = cron
+      before_install:
+        - python -m pip install cython numpy scipy
+        - python -m pip install --no-build-isolation hypothesis matplotlib pytest pytest-cov pytest-xdist tqdm
+      install:
+        - cd package
+        - python setup.py install
+        - cd ../testsuite
+        - python setup.py install
+        - cd ..
+      script:
+        - cd testsuite
+        - python -m pytest ./MDAnalysisTests --disable-pytest-warnings -n 8 -rsx --cov=MDAnalysis
+      after_success:
+        - echo "Override this stage for ARM64"
+
